--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="card-panel center">
           <i class="material-icons medium">dashboard</i>
           <h5>IMPRABOARD</h5>
-          <table>
+          <table class="col m4 s12">
         <thead>
           <tr>
               <th>Thickness (mm)</th>
