--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="card-panel center">
           <i class="material-icons medium">dashboard</i>
           <h5>IMPRABOARD</h5>
-          <table class="col m4 s12">
+          <table>
         <thead>
           <tr>
               <th>Thickness (mm)</th>
@@ -314,7 +314,7 @@
         M.Parallax.init(parallax);
 
         const scroll = document.querySelectorAll('.scrollspy');
-        M.Scrollspy.init(scroll,{
+        M.ScrollSpy.init(scroll,{
           scrollOffset: 50
         });
       </script>
