--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="card-panel center">
           <i class="material-icons medium">dashboard</i>
           <h5>IMPRABOARD</h5>
-          <table>
+          <table class="flow-text">
         <thead>
           <tr>
               <th>Thickness (mm)</th>
@@ -293,7 +293,7 @@
 
 <!--footer-->
 <footer class="blue darken-3 white-text center">
-  <p>Copyright 2019</p>
+  <p class="flow-text">Copyright 2019</p>
 </footer>
 
       <!--JavaScript at end of body for optimized loading-->
@@ -315,7 +315,7 @@
 
         const scroll = document.querySelectorAll('.scrollspy');
         M.ScrollSpy.init(scroll,{
-          scrollOffset: 50
+          ScrollOffset: 50
         });
       </script>
 
