--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
   <!--sidenav-->
   <ul class="sidenav" id="mobile-nav">
-    <li><a href="">About Us</a></li>
-          <li><a href="">Clients</a></li>
-          <li><a href="">Field of Business</a></li>
-          <li><a href="">Contact Us</a></li>
+    <li><a href="#about">About Us</a></li>
+          <li><a href="#clients">Clients</a></li>
+          <li><a href="#services">Field of Business</a></li>
+          <li><a href="#contact">Contact Us</a></li>
   </ul>
 
   <!---Slider-->
@@ -151,7 +151,7 @@
         <div class="card-panel center">
           <i class="material-icons medium">dashboard</i>
           <h5>IMPRABOARD</h5>
-          <table class="flow-text">
+          <table>
         <thead>
           <tr>
               <th>Thickness (mm)</th>
@@ -159,7 +159,6 @@
               <th>Width & Length</th>
           </tr>
         </thead>
-
         <tbody>
           <tr>
             <td>2</td>
