--- a/index.html
+++ b/index.html
@@ -147,20 +147,20 @@
           </p>
         </div>
       </div>
-      <div class="col m4 s12 flow-text">
+      <div class="col m4 s12">
         <div class="card-panel center">
           <i class="material-icons medium">dashboard</i>
           <h5>IMPRABOARD</h5>
           <table>
         <thead>
-          <tr>
+          <tr class="flow-text">
               <th>Thickness (mm)</th>
               <th>Grammage (gr/M2)</th>
               <th>Width & Length</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr class="flow-text">
             <td>2</td>
             <td>400</td>
             <td>Customized</td>
