--- a/index.html
+++ b/index.html
@@ -148,19 +148,19 @@
         </div>
       </div>
       <div class="col m4 s12">
-        <div class="card-panel center">
+        <div class="card-panel center flow-text">
           <i class="material-icons medium">dashboard</i>
           <h5>IMPRABOARD</h5>
           <table>
         <thead>
-          <tr class="flow-text">
+          <tr>
               <th>Thickness (mm)</th>
               <th>Grammage (gr/M2)</th>
               <th>Width & Length</th>
           </tr>
         </thead>
         <tbody>
-          <tr class="flow-text">
+          <tr>
             <td>2</td>
             <td>400</td>
             <td>Customized</td>
