--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           </p>
         </div>
       </div>
-      <div class="col m4 s12 flow-text">
+      <div class="col m4 s12">
         <div class="card-panel center">
           <i class="material-icons medium">dashboard</i>
           <h5>IMPRABOARD</h5>
