--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 <div id="product" class="product scrollspy">
  <div class="container product">
       <h3 class="center light grey-text text-darken-3">Product</h3>
-  <div class="row">
+  <div class="carousel">
     <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
     <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
     <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
