--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 </section>
        
 <!--product-->
-<div id="product" class="product scrollspy">
+<section id="product" class="product scrollspy">
  <div class="container product">
       <h3 class="center light grey-text text-darken-3">Product</h3>
   <div class="carousel">
@@ -249,7 +249,7 @@
     <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
   </div>
        </div>
-       </div>
+       </section>
        
 <!--contact us-->
 <section id="contact" class="contact grey lighten-3 scrollspy">
