--- a/index.html
+++ b/index.html
@@ -333,10 +333,9 @@
           ScrollOffset: 50
         });
        
-       document.addEventListener('DOMContentLoaded', function() {
-    var elems = document.querySelectorAll('.carousel');
-    var instances = M.Carousel.init(elems, options);
-  });
+       const carousel = document.querySelectorAll('.carousel');
+       M.Carousel.init(carousel);
+ 
       </script>
 
     </body>
