--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="row">
       <h3 class="light center grey-text text-darken-4">Field Of Bussines</h3>
       <div class="col m4 s12">
-        <div class="card-panel center">
+        <div class="card-panel left">
           <i class="material-icons medium">pan_tool</i>
           <h5>Consumables</h5>
           <p>1.  GLOVES (Cotton, Coating, Palm Fit Gloves, Chemical etc)<br/>
