--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <h3 class="light center grey-text text-darken-4">Field Of Bussines</h3>
       <div class="col m4 s12">
         <div class="card-panel left">
-          <i class="material-icons medium">pan_tool</i>
+          <i class="material-icons medium center">pan_tool</i>
           <h5>Consumables</h5>
           <p>1.  GLOVES (Cotton, Coating, Palm Fit Gloves, Chemical etc)<br/>
              2.  MASK, ARM WARMERS (Cotton, Carbon etc - Customize)<br/>
