--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
     <div class="row">
       <h3 class="light center grey-text text-darken-4">Field Of Bussines</h3>
       <div class="col m4 s12">
-        <div class="card-panel left">
+        <div class="card-panel">
           <i class="material-icons medium center">pan_tool</i>
-          <h5>Consumables</h5>
+          <h5 class="center">Consumables</h5>
           <p>1.  GLOVES (Cotton, Coating, Palm Fit Gloves, Chemical etc)<br/>
              2.  MASK, ARM WARMERS (Cotton, Carbon etc - Customize)<br/>
              3.  TAPE (OPP, Isolasi, Marking, Masking)<br/>
