--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
       <li>
         <img src="img/slider/2.jpg">
         <div class="caption center-align">
-          <h3 class="card-panel black-text">ONE & ONE KONESIA</h3>
+          <div class="card-panel"
+          <h3 class="z-depth-5 black-text">ONE & ONE KONESIA</h3>
           <h5 class="card-panel grey-text text-darken-4">Your Best Partner.</h5>
+        </div>
         </div>
       </li>
       <li>
