--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <li>
         <img src="img/slider/2.jpg">
         <div class="caption center-align">
-          <h3 class="z-depth-5 black-text">ONE & ONE KONESIA</h3>
+          <h3 class="black-text">ONE & ONE KONESIA</h3>
           <h5 class="card-panel grey-text text-darken-4">Your Best Partner.</h5>
         </div>
       </li>
