--- a/index.html
+++ b/index.html
@@ -244,10 +244,15 @@
   <div class="carousel">
     <a class="carousel-item" href="#one!"><img src="img/one.jpg"></a>
     <a class="carousel-item" href="#two!"><img src="img/two.jpg"></a>
-    <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
-    <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
-    <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
-  </div>
+    <a class="carousel-item" href="#three!"><img src="img/three.jpg"></a>
+    <a class="carousel-item" href="#four!"><img src="img/four.jpg"></a>
+    <a class="carousel-item" href="#five!"><img src="img/five.jpg"></a>
+    <a class="carousel-item" href="#five!"><img src="img/six.jpg"></a>
+    <a class="carousel-item" href="#five!"><img src="img/seven.jpg"></a>
+    <a class="carousel-item" href="#five!"><img src="img/eight.jpg"></a>
+    <a class="carousel-item" href="#five!"><img src="img/nine.jpg"></a>
+    <a class="carousel-item" href="#five!"><img src="img/ten.jpg"></a>
+   </div>
        </div>
        </section>
        
