--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 <section id="product" class="product scrollspy">
  <div class="container product">
       <h3 class="center light grey-text text-darken-3">Product</h3>
-  <div class="carousel">
+  <div class="carousel zoom-effect">
     <a class="carousel-item" href="#one!"><img src="img/one.jpg"></a>
     <a class="carousel-item" href="#two!"><img src="img/two.jpg"></a>
     <a class="carousel-item" href="#three!"><img src="img/three.jpg"></a>
@@ -250,7 +250,7 @@
     <a class="carousel-item" href="#five!"><img src="img/six.jpg"></a>
     <a class="carousel-item" href="#five!"><img src="img/seven.jpg"></a>
     <a class="carousel-item" href="#five!"><img src="img/eight.jpg"></a>
-    <a class="carousel-item" href="#five!"><img src="img/nine.jpg"></a>
+    <a class="carousel-item" href="#five!"><img src="img/nine.png"></a>
     <a class="carousel-item" href="#five!"><img src="img/ten.jpg"></a>
    </div>
        </div>
