--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="row">
       <h3 class="light center grey-text text-darken-4">Field Of Bussines</h3>
       <div class="col m4 s12">
-        <div class="card-panel center">
+        <div class="card-panel center" height="500px" width="500px">
           <i class="material-icons medium">pan_tool</i>
           <h5>Consumables</h5>
           <p class="left-align">1.  GLOVES (Cotton, Coating, Palm Fit Gloves, Chemical etc)<br/>
@@ -241,7 +241,7 @@
 <section id="product" class="product scrollspy">
  <div class="container product">
       <h3 class="center light grey-text text-darken-3">Product</h3>
-  <div class="carousel zoom-effect">
+  <div class="carousel">
     <a class="carousel-item" href="#one!"><img src="img/one.jpg"></a>
     <a class="carousel-item" href="#two!"><img src="img/two.jpg"></a>
     <a class="carousel-item" href="#three!"><img src="img/three.jpg"></a>
