--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
  <div class="container product">
       <h3 class="center light grey-text text-darken-3">Product</h3>
   <div class="carousel">
-    <a class="carousel-item" href="#one!"><img src="img/one.jpg"></a>
+    <a class="carousel-item" href="one.jpg" class="perbesar"><img src="img/one.jpg"></a>
     <a class="carousel-item" href="#two!"><img src="img/two.jpg"></a>
     <a class="carousel-item" href="#three!"><img src="img/three.jpg"></a>
     <a class="carousel-item" href="#four!"><img src="img/four.jpg"></a>
@@ -336,6 +336,10 @@
        
        const carousel = document.querySelectorAll('.carousel');
        M.Carousel.init(carousel);
+        
+        $(document).ready(function(){
+          $(".perbesar").fancybox();
+        });
  
       </script>
 
