--- a/index.html
+++ b/index.html
@@ -324,8 +324,9 @@
         M.Slider.init(slider,{
           indicators: false,
           height: 500,
+          width: 500,
           transition: 600,
-          interval: 300
+          interval: 3000
         });
         const parallax = document.querySelectorAll('.parallax');
         M.Parallax.init(parallax);
