--- a/index.html
+++ b/index.html
@@ -56,21 +56,21 @@
         <img src="img/slider/2.jpg">
         <div class="caption center-align">
           <h3 class="black-text">ONE & ONE KONESIA</h3>
-          <h5 class="card-panel grey-text text-darken-4">Your Best Partner.</h5>
+          <h5 class="grey-text text-darken-4">Your Best Partner.</h5>
         </div>
       </li>
       <li>
         <img src="img/slider/3.jpg">
         <div class="caption left-align">
-          <h3 class="card-panel black-text">ONE & ONE KONESIA</h3>
-          <h5 class="card-panel black-text">Your Best Partner.</h5>
+          <h3 class="black-text">ONE & ONE KONESIA</h3>
+          <h5 class="black-text">Your Best Partner.</h5>
         </div>
       </li>
       <li>
         <img src="img/slider/4.jpg">
         <div class="caption right-align">
-          <h3 class="card-panel black-text">ONE & ONE KONESIA</h3>
-          <h5 class="card-panel black-text">Your Best Partner.</h5>
+          <h3 class="black-text">ONE & ONE KONESIA</h3>
+          <h5 class="black-text">Your Best Partner.</h5>
         </div>
       </li>
     </ul>
