--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
              5. CYLINDER / REGULATOR<br/>
              6. FITTING & PU / FLEXIBLE HOSE<br/>
              7. PLC & TOUCH SCREEN<br/>
-             8. ELECTRICAL (MCCB, BUTTON, SWITCH, etc)<br/>
+             8. ELECTRICAL (MCCB, BUTTON, SWITCH, etc)<br/><br/><br/><br/><br/><br/><br>
           </p>
         </div>
       </div>
@@ -156,9 +156,9 @@
           <table>
         <thead>
           <tr>
-              <th>Thickness (mm)</th>
-              <th>Grammage (gr/M2)</th>
-              <th>Width & Length</th>
+              <th><h6>Thick<br>ness (mm)</h5></th>
+              <th><h6>Gram<br>mage (gr/M2)</h6></th>
+              <th><h6>Width <br>& Length</h6></th>
           </tr>
         </thead>
         <tbody>
@@ -200,7 +200,7 @@
              3. HAND TOOL<br/>
              4. PRESSURE SENSOR & GAUGE<br/>
              5. TEMPERATURE SENSOR & GAUGE<br/>
-             6. MEASURING INSTRUMENT<br/>
+             6. MEASURING INSTRUMENT<br/><br/><br/>
           </p>
         </div>
       </div>
@@ -229,7 +229,7 @@
              4. STEEL BAR (ROUND, SQUARE)<br/>
              5. WIRE MESH<br/>
              6. KAWAT BENDRAT<br/>
-             7. POLYCARBONATE<br/>
+             7. POLYCARBONATE<br/><br/>
           </p>
         </div>
       </div>
