--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
              5.  CABLE & CABLE TIES<br/>
              6.  BARCODE<br/>
              7.  LAMP (Fluorescent Lamp, LED, UV etc)<br/>
-             8.  WELDING (Welding Rod, Mask, Gloves, etc)<br/>
+             8.  WELDING (Welding Rod, Mask, Gloves, etc)<br/><br/><br/>
           </p>
         </div>
       </div>
@@ -156,36 +156,36 @@
           <table>
         <thead>
           <tr>
-              <th><h6>Thick<br>ness (mm)</h5></th>
+              <th><h6>Thick<br>ness (mm)</h6></th>
               <th><h6>Gram<br>mage (gr/M2)</h6></th>
-              <th><h6>Width <br>& Length</h6></th>
+              <th><h6>Width &<br>Length</h6></th>
           </tr>
         </thead>
         <tbody>
           <tr>
             <td>2</td>
             <td>400</td>
-            <td>Customized</td>
+            <td>Custom</td>
           </tr>
           <tr>
             <td>3</td>
             <td>500</td>
-            <td>Customized</td>
+            <td>Custom</td>
           </tr>
           <tr>
             <td>4</td>
             <td>700</td>
-            <td>Customized</td>
+            <td>Custom</td>
           </tr>
           <tr>
             <td>5</td>
             <td>900</td>
-            <td>Customized</td>
+            <td>Custom</td>
           </tr>
           <tr>
             <td>6</td>
             <td>1250</td>
-            <td>Customized</td>
+            <td>Custom</td>
           </tr>
         </tbody>
       </table>
