--- a/index.html
+++ b/index.html
@@ -47,10 +47,6 @@
     <ul class="slides">
       <li>
         <img src="img/slider/1.png">
-        <div>
-          <h3 class="black-text"></h3>
-          <h5 class="grey-text text-darken-3"></h5>
-        </div>
       </li>
       <li>
         <img src="img/slider/2.jpg">
@@ -62,15 +58,15 @@
       <li>
         <img src="img/slider/3.jpg">
         <div class="caption left-align">
-          <h3 class="black-text">ONE & ONE KONESIA</h3>
-          <h5 class="black-text">Your Best Partner.</h5>
+          <h3 class="white-text">ONE & ONE KONESIA</h3>
+          <h5 class="white-text">Your Best Partner.</h5>
         </div>
       </li>
       <li>
         <img src="img/slider/4.jpg">
         <div class="caption right-align">
-          <h3 class="black-text">ONE & ONE KONESIA</h3>
-          <h5 class="black-text">Your Best Partner.</h5>
+          <h3 class="white-text">ONE & ONE KONESIA</h3>
+          <h5 class="white-text">Your Best Partner.</h5>
         </div>
       </li>
     </ul>
@@ -102,13 +98,13 @@
      <img src="img/clients/9.png">
      </div>
       <div class="col m3 s12 center">
-      <img src="img/clients/10.gif">
+      <img src="img/clients/10.png">
       </div>
        <div class="col m3 s12 center">
        <img src="img/clients/11.png">
        </div>
          <div class="col m3 s12 center">
-         <img src="img/clients/12.jpg">
+         <img src="img/clients/12.png">
          </div>
      </div>
     </div> 
