--- a/index.html
+++ b/index.html
@@ -221,12 +221,116 @@
           <h5>STEEL</h5>
           <p class="left-align">1. SQUARE PIPE<br/>
              2. CNP STEEL<br/>
+             3. STEEL & BRASS PLATE<br/><div class="col m6 s12">
+        <div class="card-panel center">
+          <i class="material-icons medium">view_headline</i>
+          <h5>STEEL</h5>
+          <p>1. SQUARE PIPE<br/>
+             2. CNP STEEL<br/>
              3. STEEL & BRASS PLATE<br/>
              4. STEEL BAR (ROUND, SQUARE)<br/>
              5. WIRE MESH<br/>
              6. KAWAT BENDRAT<br/>
-             7. POLYCARBONATE<br/><br/>
+             7. POLYCARBONATE<br/>
           </p>
+        </div>
+      </div>
+      <div class="col m6 s12">
+        <div class="card-panel center">
+          <i class="material-icons medium">timer</i>
+          <h5>TOOL & GAUGE</h5>
+          <p>1. DRILL, TAP, END MILL<br/>
+             2. MACHINE TOOL<br/>
+             3. HAND TOOL<br/>
+             4. PRESSURE SENSOR & GAUGE<br/>
+             5. TEMPERATURE SENSOR & GAUGE<br/>
+             6. MEASURING INSTRUMENT<br/>
+          </p><br>
+        </div>
+      </div>
+      <div class="col m6 s12">
+        <div class="card-panel center">
+          <i class="material-icons medium">person</i>
+          <h5>Safety Supplies</h5>
+          <p>1. SAFETY SHOES<br/>
+             2. SAFETY HELMET<br/>
+             3. SAFETY VEST<br/>
+             4. SAFETY GLOVES<br/>
+             5. SAFETY FENCE<br/>
+             6. SAFETY CONE<br/>
+             7. SAFETY GOGGLES<br/>
+             8. EMERGENCY EYE WASHSING<br/>
+          </p>
+        </div>
+      </div>
+      <div class="col m6 s12">
+        <div class="card-panel center">
+          <i class="material-icons medium">settings</i>
+          <h5>Spare Part</h5>
+          <p>1. BEARING / SEAL<br/>
+             2. VAN BELT<br/>
+             3. GEAR BOX / MOTOR<br/>
+             4. VALVE / FILTER<br/>
+             5. CYLINDER / REGULATOR<br/>
+             6. FITTING & PU / FLEXIBLE HOSE<br/>
+             7. PLC & TOUCH SCREEN<br/>
+             8. ELECTRICAL (MCCB, BUTTON, SWITCH, etc)<br/>
+          </p>
+        </div>
+      </div>
+      <div class="col m6 s12">
+        <div class="card-panel center">
+          <i class="material-icons medium">pan_tool</i>
+          <h5>Consumables</h5>
+          <p>1.  GLOVES (Cotton, Coating, Palm Fit Gloves, Chemical etc)<br/>
+             2.  MASK, ARM WARMERS (Cotton, Carbon etc - Customize)<br/>
+             3.  TAPE (OPP, Isolasi, Marking, Masking)<br/>
+             4.  Paint & Brush<br/>
+             5.  CABLE & CABLE TIES<br/>
+             6.  BARCODE<br/>
+             7.  LAMP (Fluorescent Lamp, LED, UV etc)<br/>
+             8.  WELDING (Welding Rod, Mask, Gloves, etc)<br/><br/><br/><br/><br/>
+          </p>
+        </div>
+      </div>
+      <div class="col m6 s12">
+        <div class="card-panel center">
+          <i class="material-icons medium">dashboard</i>
+          <h5>IMPRABOARD</h5>
+          <table> 
+        <thead>
+              <th>Thickness (mm)</th>
+              <th>Grammage (gr/M2)</th>
+              <th>Width & Length</th>
+        </thead>
+        <tbody>
+          <tr>
+            <td>2</td>
+            <td>400</td>
+            <td>Customized</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>500</td>
+            <td>Customized</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>700</td>
+            <td>Customized</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>900</td>
+            <td>Customized</td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>1250</td>
+            <td>Customized</td>
+          </tr>
+        </tbody>
+      </table>
         </div>
       </div>
     </div>
