--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <nav class="blue darken-3">
       <div class="container">
       <div class="nav-wrapper">
-        <a href="#home" class="brand-logo">ONE & ONE</a>
+        <font face=Impact>
+          <a href="#home" class="brand-logo">ONE & ONE</a></font>
         <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i><a>
         <ul class="right hide-on-med-and-down">
           <li><a href="#about">About Us</a></li>
@@ -43,6 +44,7 @@
   </ul>
 
   <!---Slider-->
+   <font face="Impact">
   <div class="slider">
     <ul class="slides">
       <li>
@@ -51,27 +53,28 @@
       <li>
         <img src="img/slider/2.jpg">
         <div class="caption center-align">
-          <h3 class="black-text">ONE & ONE KONESIA</h3>
-          <h5 class="grey-text text-darken-4">Your Best Partner.</h5>
+          <h1 class="black-text">ONE & ONE KONESIA</h1>
+          <h5 class="black-text">Your Best Partner</h5>
         </div>
       </li>
       <li>
         <img src="img/slider/3.jpg">
         <div class="caption left-align">
-          <h3 class="white-text">ONE & ONE KONESIA</h3>
-          <h5 class="white-text">Your Best Partner.</h5>
+          <h1 class="white-text">ONE & ONE KONESIA</h1>
+          <h5 class="white-text">Your Best Partner</h5>
         </div>
       </li>
       <li>
         <img src="img/slider/4.jpg">
         <div class="caption right-align">
-          <h3 class="white-text">ONE & ONE KONESIA</h3>
-          <h5 class="white-text">Your Best Partner.</h5>
+          <h1 class="black-text">ONE & ONE KONESIA</h1>
+          <h5 class="black-text">Your Best Partner</h5>
         </div>
       </li>
     </ul>
   </div>
-
+</font>
+        
 <!--About Us-->
 <selection id="about" class="about scrollspy">
   <div class="container">
@@ -115,6 +118,20 @@
   <div class="container">
     <div class="row">
       <h3 class="light center grey-text text-darken-4">Field Of Bussines</h3>
+      <div class="col m6 s12">
+        <div class="card-panel center">
+          <i class="material-icons medium">view_headline</i>
+          <h5>STEEL</h5>
+          <p>1. SQUARE PIPE<br/>
+             2. CNP STEEL<br/>
+             3. STEEL & BRASS PLATE<br/>
+             4. STEEL BAR (ROUND, SQUARE)<br/>
+             5. WIRE MESH<br/>
+             6. KAWAT BENDRAT<br/>
+             7. POLYCARBONATE<br/>
+          </p>
+        </div>
+      </div>
       <div class="col m6 s12">
         <div class="card-panel center">
           <i class="material-icons medium">timer</i>
@@ -222,16 +239,21 @@
  <div class="container product">
       <h3 class="center light grey-text text-darken-3">Product</h3>
   <div class="carousel">
-    <a class="carousel-item" href="#one!"><img src="img/one.jpg"></a>
-    <a class="carousel-item" href="#two!"><img src="img/two.jpg"></a>
-    <a class="carousel-item" href="#three!"><img src="img/three.jpg"></a>
-    <a class="carousel-item" href="#four!"><img src="img/four.jpg"></a>
+    <a class="carousel-item" href="#five!"><img src="img/one.jpg"></a>
+    <a class="carousel-item" href="#five!"><img src="img/two.jpg"></a>
+    <a class="carousel-item" href="#five!"><img src="img/three.jpg"></a>
+    <a class="carousel-item" href="#five!"><img src="img/four.jpg"></a>
     <a class="carousel-item" href="#five!"><img src="img/five.jpg"></a>
     <a class="carousel-item" href="#five!"><img src="img/six.jpg"></a>
     <a class="carousel-item" href="#five!"><img src="img/seven.jpg"></a>
     <a class="carousel-item" href="#five!"><img src="img/eight.jpg"></a>
     <a class="carousel-item" href="#five!"><img src="img/nine.png"></a>
     <a class="carousel-item" href="#five!"><img src="img/ten.jpg"></a>
+    <a class="carousel-item" href="#five!"><img src="img/eleven.jpg"></a>
+    <a class="carousel-item" href="#five!"><img src="img/twelve.jpg"></a>
+    <a class="carousel-item" href="#five!"><img src="img/thirteen.jpg"></a>
+    <a class="carousel-item" href="#five!"><img src="img/fourteen.png"></a>
+    <a class="carousel-item" href="#five!"><img src="img/fiveteen.jpg"></a>
    </div>
        </div>
        </section>
