--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       <li>
         <img src="img/slider/2.jpg">
         <div class="caption center-align">
-          <h1 class="black-text">ONE & ONE KONESIA</h1>
-          <h5 class="black-text">Your Best Partner</h5>
+          <h1 class="white-text">ONE & ONE KONESIA</h1>
+          <h5 class="white-text">Your Best Partner</h5>
         </div>
       </li>
       <li>
@@ -194,7 +194,7 @@
         <div class="card-panel center">
           <i class="material-icons medium">dashboard</i>
           <h5>IMPRABOARD</h5>
-          <table> 
+          <table align="justify"> 
         <thead>
               <th>Thickness (mm)</th>
               <th>Grammage (gr/M2)</th>
