--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
       <li>
         <img src="img/slider/4.jpg">
         <div class="caption left-align">
-          <h1 class="black-text">ONE & ONE KONESIA</h1>
-          <h5 class="black-text">Your Best Partner</h5>
+          <h1 class="white-text">ONE & ONE KONESIA</h1>
+          <h5 class="white-text">Your Best Partner</h5>
         </div>
       </li>
     </ul>
