--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <a class="carousel-item" href="#five!"><img src="img/eleven.jpg"></a>
     <a class="carousel-item" href="#five!"><img src="img/twelve.jpg"></a>
     <a class="carousel-item" href="#five!"><img src="img/thirteen.jpg"></a>
-    <a class="carousel-item" href="#five!"><img src="img/fourteen.png"></a>
+    <a class="carousel-item" href="#five!"><img src="img/fourteen.jpg"></a>
     <a class="carousel-item" href="#five!"><img src="img/fiveteen.jpg"></a>
    </div>
        </div>
