--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </li>
       <li>
         <img src="img/slider/4.jpg">
-        <div class="caption left-align">
+        <div class="caption center-align">
           <h1 class="white-text">ONE & ONE KONESIA</h1>
           <h5 class="white-text">Your Best Partner</h5>
         </div>
