--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="card-panel center">
           <i class="material-icons medium">view_headline</i>
           <h5>STEEL</h5>
-          <p>1. SQUARE PIPE<br/>
+          <p class="left-align">1. SQUARE PIPE<br/>
              2. CNP STEEL<br/>
              3. STEEL & BRASS PLATE<br/>
              4. STEEL BAR (ROUND, SQUARE)<br/>
@@ -136,7 +136,7 @@
         <div class="card-panel center">
           <i class="material-icons medium">timer</i>
           <h5>TOOL & GAUGE</h5>
-          <p>1. DRILL, TAP, END MILL<br/>
+          <p class="left-align">1. DRILL, TAP, END MILL<br/>
              2. MACHINE TOOL<br/>
              3. HAND TOOL<br/>
              4. PRESSURE SENSOR & GAUGE<br/>
@@ -149,7 +149,7 @@
         <div class="card-panel center">
           <i class="material-icons medium">person</i>
           <h5>Safety Supplies</h5>
-          <p>1. SAFETY SHOES<br/>
+          <p class="left-align">1. SAFETY SHOES<br/>
              2. SAFETY HELMET<br/>
              3. SAFETY VEST<br/>
              4. SAFETY GLOVES<br/>
@@ -164,7 +164,7 @@
         <div class="card-panel center">
           <i class="material-icons medium">settings</i>
           <h5>Spare Part</h5>
-          <p>1. BEARING / SEAL<br/>
+          <p class="left-align">1. BEARING / SEAL<br/>
              2. VAN BELT<br/>
              3. GEAR BOX / MOTOR<br/>
              4. VALVE / FILTER<br/>
@@ -179,7 +179,7 @@
         <div class="card-panel center">
           <i class="material-icons medium">pan_tool</i>
           <h5>Consumables</h5>
-          <p>1.  GLOVES (Cotton, Coating, Palm Fit Gloves, Chemical etc)<br/>
+          <p class="left-align">1.  GLOVES (Cotton, Coating, Palm Fit Gloves, Chemical etc)<br/>
              2.  MASK, ARM WARMERS (Cotton, Carbon etc - Customize)<br/>
              3.  TAPE (OPP, Isolasi, Marking, Masking)<br/>
              4.  Paint & Brush<br/>
