--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <!---Slider-->
    <font face="Impact">
-  <div class="slider">
+  <div class="slider" widht="70%">
     <ul class="slides">
       <li>
         <img src="img/slider/1.png">
